# RAGE

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.parity  RAGE_FORMAT.md  README.md
.github/workflows/: release.yml
crates/rage-audio/: Cargo.toml
crates/rage-audio/src/: decoder.rs  lib.rs  normalize.rs  resampler.rs
crates/rage-classifier/: Cargo.toml
crates/rage-classifier/src/: lib.rs
crates/rage-cli/: Cargo.toml
crates/rage-cli/src/: cli.rs  deep.rs  main.rs  output.rs  rage_file.rs
crates/rage-core/: Cargo.toml
crates/rage-core/src/: config.rs  error.rs  lib.rs  tags.rs  types.rs
crates/rage-extractor/: Cargo.toml
crates/rage-extractor/src/: chroma.rs  key.rs  lib.rs  mel.rs  mfcc.rs  onset.rs  pipeline.rs  spectral.rs  stft.rs  tempo.rs  temporal.rs  window.rs
crates/rage-extractor/tests/: parity.rs
scripts/parity/: generate_reference.py  requirements.txt
scripts/training/: config.py  export_onnx.py  requirements.txt  train_mood.py  train_va.py  verify_onnx.py
scripts/training/datasets/: download_deam.py  download_jamendo.py  preprocess_deam.py  preprocess_jamendo.py
scripts/training/models/: __init__.py  losses.py  mood_tagger.py  valence_arousal.py
scripts/training/utils/: augment.py  data.py  device.py  metrics.py
