[package]
name = "rage-classifier"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "ML inference for music emotion recognition using ONNX Runtime"

[dependencies]
rage-core = { workspace = true }
rage-extractor = { workspace = true }
ndarray = { workspace = true }
ort = { workspace = true }
anyhow = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
openssl = { workspace = true }
