[package]
name = "rage-extractor"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pure-Rust audio feature extraction for music emotion recognition"

[dependencies]
rage-core = { workspace = true }
ndarray = { workspace = true }
rustfft = { workspace = true }
num-complex = { workspace = true }
num-traits = { workspace = true }
